# voicebot-rs

./: .gitignore  AGENTS.md  PERFORMANCE_REVIEW.md  PLAN.md  PLAN.old.md  PROJECT_REQUIREMENTS.md
dashboard/: Dockerfile  middleware.ts  next.config.ts  package.json  tsconfig.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/(dashboard)/: layout.tsx
dashboard/app/(dashboard)/calls/: page.tsx
dashboard/app/(dashboard)/campaigns/: page.tsx
dashboard/app/login/: page.tsx
dashboard/components/layout/: sidebar.tsx
dashboard/components/providers/: query-provider.tsx
dashboard/lib/: api.ts
docs/speaches/: api-reference.md  setup.md
skills/agent_tool_calling/: SKILL.md  agent_tool_calling.md
skills/asterisk_ari/: SKILL.md
skills/audio_dsp/: SKILL.md  audio_dsp.md
skills/configuration/: SKILL.md  configuration.md
skills/error_handling_and_fault_tolerance/: SKILL.md  error_handling_and_fault_tolerance.md
skills/observability/: SKILL.md  observability.md
skills/orchestrator_and_pipeline_session/: SKILL.md  orchestrator_and_pipeline_session.md
skills/provider_integration/: SKILL.md  provider_integration.md
skills/robuto/: SKILL.md
skills/rust/: SKILL.md
skills/rust_async/: SKILL.md  rust_async.md
skills/speaches/: SKILL.md
skills/testing_convention/: SKILL.md  testing_convention.md
skills/websocket_transport/: SKILL.md  websocket_transport.md
skills/xphone/: SKILL.md
system/asterisk/: docker-compose.yaml
system/asterisk/dev/: pjsip_show_endpoints.sh
system/asterisk/etc/: ari.conf  extensions_local.conf  modules.conf  pjsip_endpoint.conf  pjsip_transport.conf
system/asterisk/monitoring/: prometheus.yaml
system/loadtest_mock_provider/: README.md  config.voicebot.docker.toml  config.voicebot.toml  docker-compose.yaml  loadtest.toml  start.sh
system/loadtest_mock_provider/asterisk/: pjsip_transport.conf
system/loadtest_mock_provider/mock-provider/: Dockerfile
system/loadtest_mock_provider/monitoring/: prometheus.yaml
system/loadtest_voicebot_core/: Dockerfile.loadtest  README.md  config.voicebot.toml  docker-compose.yaml  loadtest.toml  start.sh
system/loadtest_voicebot_core/monitoring/: prometheus.yaml
system/monitoring/: docker-compose.yaml
system/monitoring/prometheus/: prometheus.yaml
system/production/: docker-compose.yaml
system/speaches/: compose.cpu.yaml  compose.yaml
system/speaches/monitoring/: prometheus.yaml
system/voicebot-core-demo/: README.md  app.js  config.docker.toml  docker-compose.yaml  index.html  start.sh  style.css
system/voicebot-core-demo/monitoring/: prometheus.yaml
voicebot/: ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  config.toml  loadtest.phase1.toml  loadtest.ws.toml  loadtest.xphone.toml
voicebot/crates/agent/: Cargo.toml
voicebot/crates/agent/src/: core.rs  error.rs  lib.rs  memory.rs  metric_tool.rs  openai.rs  stub.rs  tool.rs
voicebot/crates/api/: Cargo.toml
voicebot/crates/api/src/: error.rs  lib.rs  main.rs  pagination.rs  state.rs
voicebot/crates/api/src/routes/: auth.rs  calls.rs  campaigns.rs  contacts.rs  mod.rs  phone_numbers.rs  sse.rs  tenants.rs  users.rs
voicebot/crates/api/tests/: tenant_isolation.rs
voicebot/crates/asr/: Cargo.toml
voicebot/crates/asr/src/: deepgram.rs  error.rs  lib.rs  speaches.rs  stub.rs
voicebot/crates/asr/tests/: speaches_integration.rs
voicebot/crates/auth/: Cargo.toml
voicebot/crates/auth/src/: error.rs  jwt.rs  lib.rs  middleware.rs  password.rs
voicebot/crates/cache/: Cargo.toml
voicebot/crates/cache/src/: campaign.rs  client.rs  error.rs  lib.rs  rate_limit.rs  routing.rs  session.rs
voicebot/crates/cache/tests/: cache_roundtrip.rs
voicebot/crates/common/: Cargo.toml
voicebot/crates/common/src/: audio.rs  config.rs  error.rs  events.rs  lib.rs  retry.rs  testing.rs  traits.rs  types.rs
voicebot/crates/core/: Cargo.toml
voicebot/crates/core/src/: error.rs  lib.rs  observability.rs  orchestrator.rs  session.rs  stats.rs
voicebot/crates/core/tests/: pipeline_integration.rs  speaches_integration.rs
voicebot/crates/db/: Cargo.toml
voicebot/crates/db/migrations/: 0001_tenants.sql  0002_users.sql  0003_campaigns.sql  0004_contacts.sql  0005_call_records.sql  0006_phone_numbers.sql  0007_usage_records.sql  0008_tenant_max_concurrent.sql  0009_phone_number_campaign.sql  0010_force_rls_tenant_policies.sql
voicebot/crates/db/src/: error.rs  lib.rs  models.rs  pool.rs
voicebot/crates/db/src/queries/: call_records.rs  campaigns.rs  contacts.rs  mod.rs  phone_numbers.rs  tenants.rs  usage.rs  users.rs
voicebot/crates/db/tests/: tenant_rls.rs
voicebot/crates/loadtest/: Cargo.toml  README.md
voicebot/crates/loadtest/src/: analysis.rs  audio.rs  backend.rs  config.rs  error.rs  lib.rs  main.rs  report.rs  runner.rs
voicebot/crates/loadtest/src/backend/: asterisk.rs  ws_backend.rs  xphone_backend.rs
voicebot/crates/loadtest/tests/: analysis_smoke.rs  xphone_integration.rs
voicebot/crates/mock-provider/: Cargo.toml
voicebot/crates/mock-provider/src/: main.rs
voicebot/crates/scheduler/: Cargo.toml
voicebot/crates/scheduler/src/: context.rs  dialer.rs  error.rs  jobs.rs  lib.rs  main.rs  post_call.rs
voicebot/crates/server/: Cargo.toml
voicebot/crates/server/src/: main.rs
voicebot/crates/storage/: Cargo.toml
voicebot/crates/storage/src/: client.rs  error.rs  lib.rs
voicebot/crates/storage/tests/: storage_roundtrip.rs
voicebot/crates/transport/asterisk/: Cargo.toml
voicebot/crates/transport/asterisk/src/: ari_client.rs  audiosocket.rs  error.rs  events.rs  handler.rs  lib.rs  rtp.rs
voicebot/crates/transport/asterisk/tests/: ari_integration.rs
voicebot/crates/transport/websocket/: Cargo.toml
voicebot/crates/transport/websocket/src/: error.rs  handler.rs  lib.rs  protocol.rs
voicebot/crates/tts/: Cargo.toml
voicebot/crates/tts/src/: elevenlabs.rs  error.rs  lib.rs  speaches.rs  stub.rs
voicebot/crates/tts/tests/: speaches_integration.rs
voicebot/crates/vad/: Cargo.toml
voicebot/crates/vad/src/: component.rs  energy.rs  error.rs  lib.rs  speaches.rs
(+13 files in other folders)
