[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/vad",
    "crates/asr",
    "crates/agent",
    "crates/tts",
    "crates/core",
    "crates/transport/websocket",
    "crates/transport/asterisk",
    "crates/server",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
async-trait = "0.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
