[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
