[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voicebot-api"
path = "src/main.rs"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
db = { path = "../db" }
cache = { path = "../cache" }
auth = { path = "../auth" }
storage = { path = "../storage" }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
