[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = "../db" }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { version = "0.8" }
axum-extra = { workspace = true }
