[package]
name = "voicebot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
vad = { path = "../vad" }
asr = { path = "../asr" }
agent = { path = "../agent" }
tts = { path = "../tts" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
hound = "3.5"
