[package]
name = "voicebot-loadtest"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect"] }
toml = "0.8"
regex = "1"
hound = "3.5"
xphone = "0.4"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"