[package]
name = "mock-provider"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mock-provider"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
axum = "0.8"
bytes = "1"
hound = "3.5"
