[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voicebot-scheduler"
path = "src/main.rs"

[lib]
name = "scheduler"
path = "src/lib.rs"

[dependencies]
db = { path = "../db" }
cache = { path = "../cache" }
storage = { path = "../storage" }
apalis = { workspace = true }
apalis-sql = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
