[package]
name = "transport-asterisk"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }
voicebot-core = { path = "../../core" }
db = { path = "../../db" }
cache = { path = "../../cache" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio-tungstenite = { version = "0.26", default-features = false, features = [
    "connect",
] }
